# a2aexample

./: A2Aclient.py  Readme.md  client.py
SomeExample/: a2a_client.py  a2a_server.py  requirements.txt  requirments.txt
SomeExample/front/: README.md  a2a_cli.ts  a2aclient.js  a2aclient_main.js  package.json  tsconfig.json
SomeExample/quickstart/: README.md  a2a_client.py  adk_agent_executor.py  agent.py  main_api.py
a2a-adk-app/: README.md  a2a_client.py  pyproject.toml
a2a-adk-app/airbnb_agent/: __main__.py
a2a-adk-app/host_agent/: .env.example  README.md
a2a-adk-app/host_agent/adk_agent/: README.md  __init__.py  agent.py
a2a-adk-app/postcode_agent/: .env.example  __main__.py  adk_agent.py  load_mcp.py  mcp_config.json  prompt.txt
a2a-adk-app/postcode_agent/mcpserver/: postcode_tool.py
a2a-adk-app/weather_agent/: README.md  __main__.py  adk_agent.py  load_mcp.py  mcp_config.json  prompt.txt
a2a-adk-app/weather_agent/mcpserver/: weather_tool.py
